hphp/hack/test/typecheck/attributes/global_constant_attribute.php.exp
File "global_constant_attribute.php", line 3, characters 19-30:
Attribute arguments must be literals (Parsing[1002])
